--- a/hub/CMakeLists.txt
+++ b/hub/CMakeLists.txt
@@ -2,8 +2,9 @@ set(COOLEASE_DEVICE "hub")
 set(APP "hub_${CMAKE_BUILD_TYPE}")
 set(BOOTLOADER "${APP}_bootloader")
 set(DEVICE "stm32l051c8t6")
-set(LINKER_SCRIPT "${CMAKE_CURRENT_LIST_DIR}/ld/hub.ld")
-set(BOOTLOADER_LINKER_SCRIPT "${CMAKE_CURRENT_LIST_DIR}/ld/hub_bootloader.ld")
+set(LINKER_SCRIPT "freestanding.ld")
+set(APP_LINKER_SCRIPT "app.ld")
+set(BOOTLOADER_LINKER_SCRIPT "bootloader.ld")
 set(HUB_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/include")
 
 ################################################################################
@@ -26,7 +27,11 @@ add_executable(${APP} ${C_SOURCES_APP})
 
 target_include_directories(${APP} PRIVATE ${HUB_INCLUDE})
 target_link_libraries(${APP} PRIVATE ${COMMON_LIB})
-target_link_options(${APP} PRIVATE -T${LINKER_SCRIPT})
+target_link_options(${APP} PUBLIC
+  -T${APP_LINKER_SCRIPT}
+  -L${CMAKE_CURRENT_LIST_DIR}/ld
+  -L${CMAKE_CURRENT_LIST_DIR}/../config/ld
+)
 
 add_custom_target(${APP}.lss ALL
   DEPENDS $<TARGET_FILE:${APP}>
@@ -39,16 +44,20 @@ add_custom_target(${APP}.lss ALL
 # Hub bootloader
 ################################################################################
 
-# set(C_SOURCES_BOOTLOADER "hub_bootloader.c" ${C_SOURCES})
-# add_executable(${BOOTLOADER} ${C_SOURCES_BOOTLOADER})
+set(C_SOURCES_BOOTLOADER "hub_bootloader.c" ${C_SOURCES})
+add_executable(${BOOTLOADER} ${C_SOURCES_BOOTLOADER})
 
-# target_include_directories(${BOOTLOADER} PRIVATE ${HUB_INCLUDE})
-# target_link_libraries(${BOOTLOADER} PRIVATE ${COMMON_LIB})
-# target_link_options(${BOOTLOADER} PRIVATE -T${BOOTLOADER_LINKER_SCRIPT})
+target_include_directories(${BOOTLOADER} PRIVATE ${HUB_INCLUDE})
+target_link_libraries(${BOOTLOADER} PRIVATE ${COMMON_LIB})
+target_link_options(${BOOTLOADER} PUBLIC
+  -T${BOOTLOADER_LINKER_SCRIPT}
+  -L${CMAKE_CURRENT_LIST_DIR}/ld
+  -L${CMAKE_CURRENT_LIST_DIR}/../config/ld
+)
 
-# add_custom_target(${BOOTLOADER}.lss ALL
-#   DEPENDS $<TARGET_FILE:${BOOTLOADER}>
-#   COMMAND ${CMAKE_COMMAND} -E echo "Generating ${BOOTLOADER}.lss from ${BOOTLOADER}.elf"
-#   COMMAND arm-none-eabi-objdump -S $<TARGET_FILE:${BOOTLOADER}>.elf >
-#   $<TARGET_FILE:${BOOTLOADER}>.lss
-# )
+add_custom_target(${BOOTLOADER}.lss ALL
+  DEPENDS $<TARGET_FILE:${BOOTLOADER}>
+  COMMAND ${CMAKE_COMMAND} -E echo "Generating ${BOOTLOADER}.lss from ${BOOTLOADER}.elf"
+  COMMAND arm-none-eabi-objdump -S $<TARGET_FILE:${BOOTLOADER}>.elf >
+  $<TARGET_FILE:${BOOTLOADER}>.lss
+)
