--- a/sensor/CMakeLists.txt
+++ b/sensor/CMakeLists.txt
@@ -2,8 +2,9 @@ set(COOLEASE_DEVICE "sensor")
 set(APP "sensor_${CMAKE_BUILD_TYPE}")
 set(BOOTLOADER "${APP}_bootloader")
 set(DEVICE "stm32l051c8t6")
-set(LINKER_SCRIPT "${CMAKE_CURRENT_LIST_DIR}/ld/sensor.ld")
-set(BOOTLOADER_LINKER_SCRIPT "${CMAKE_CURRENT_LIST_DIR}/ld/sensor_bootloader.ld")
+set(LINKER_SCRIPT "freestanding.ld")
+set(APP_LINKER_SCRIPT "app.ld")
+set(BOOTLOADER_LINKER_SCRIPT "bootloader.ld")
 set(SENSOR_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/include")
 
 ################################################################################
@@ -23,7 +24,14 @@ add_executable(${APP} ${C_SOURCES_APP})
 
 target_include_directories(${APP} PRIVATE ${SENSOR_INCLUDE})
 target_link_libraries(${APP} PRIVATE ${COMMON_LIB})
-target_link_options(${APP} PRIVATE -T${LINKER_SCRIPT})
+target_link_options(${APP} PRIVATE -T${APP_LINKER_SCRIPT})
+
+target_link_options(${APP} PUBLIC
+  -T${APP_LINKER_SCRIPT}
+  -L${CMAKE_CURRENT_LIST_DIR}/ld
+  -L${CMAKE_CURRENT_LIST_DIR}/../config/ld
+)
+
 
 add_custom_target(${APP}.lss ALL
   DEPENDS $<TARGET_FILE:${APP}>
@@ -41,7 +49,12 @@ add_executable(${BOOTLOADER} ${C_SOURCES_BOOTLOADER})
 
 target_include_directories(${BOOTLOADER} PRIVATE ${SENSOR_INCLUDE})
 target_link_libraries(${BOOTLOADER} PRIVATE ${COMMON_LIB})
-target_link_options(${BOOTLOADER} PRIVATE -T${BOOTLOADER_LINKER_SCRIPT})
+
+target_link_options(${BOOTLOADER} PUBLIC
+  -T${BOOTLOADER_LINKER_SCRIPT}
+  -L${CMAKE_CURRENT_LIST_DIR}/ld
+  -L${CMAKE_CURRENT_LIST_DIR}/../config/ld
+)
 
 add_custom_target(${BOOTLOADER}.lss ALL
   DEPENDS $<TARGET_FILE:${BOOTLOADER}>
