build/launch: add freestanding build type, setup openocd debugging

--- a/hub/CMakeLists.txt
+++ b/hub/CMakeLists.txt
@@ -1,8 +1,8 @@
 set(COOLEASE_DEVICE "hub")
-set(APP "hub_${CMAKE_BUILD_TYPE}")
-set(BOOTLOADER "${APP}_bootloader")
-set(DEVICE "stm32l051c8t6")
-set(LINKER_SCRIPT "freestanding.ld")
+set(FREE "hub_${CMAKE_BUILD_TYPE}")
+set(APP "hub_app_${CMAKE_BUILD_TYPE}")
+set(BOOTLOADER "hub_bootloader_${CMAKE_BUILD_TYPE}")
+set(FREE_LINKER_SCRIPT "freestanding.ld")
 set(APP_LINKER_SCRIPT "app.ld")
 set(BOOTLOADER_LINKER_SCRIPT "bootloader.ld")
 set(HUB_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/include")
@@ -14,19 +14,43 @@ set(HUB_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/include")
 add_subdirectory(../common ${CMAKE_CURRENT_BINARY_DIR}/common)
 
 set(C_SOURCES "cusb.c" "sim.c" "w25qxx.c")
+set(C_SOURCES_APP "hub.c" ${C_SOURCES})
+set(C_SOURCES_BOOTLOADER "hub_bootloader.c" ${C_SOURCES})
 
 # TODO: common requires cusb headers so must pass back
 target_include_directories(${COMMON_LIB} PRIVATE ${HUB_INCLUDE})
 
 ################################################################################
+# Hub freestanding
+################################################################################
+
+add_executable(${FREE} ${C_SOURCES_APP})
+
+target_include_directories(${FREE} PRIVATE ${HUB_INCLUDE})
+target_link_libraries(${FREE} PRIVATE ${COMMON_LIB})
+
+target_link_options(${FREE} PUBLIC
+  -T${FREE_LINKER_SCRIPT}
+  -L${CMAKE_CURRENT_LIST_DIR}/ld
+  -L${CMAKE_CURRENT_LIST_DIR}/../config/ld
+)
+
+add_custom_target(${FREE}.lss ALL
+  DEPENDS $<TARGET_FILE:${FREE}>
+  COMMAND ${CMAKE_COMMAND} -E echo "Generating ${FREE}.lss from ${FREE}.elf"
+  COMMAND arm-none-eabi-objdump -S $<TARGET_FILE:${FREE}>.elf >
+  $<TARGET_FILE:${FREE}>.lss
+)
+
+################################################################################
 # Hub app
 ################################################################################
 
-set(C_SOURCES_APP "hub.c" ${C_SOURCES})
 add_executable(${APP} ${C_SOURCES_APP})
 
 target_include_directories(${APP} PRIVATE ${HUB_INCLUDE})
 target_link_libraries(${APP} PRIVATE ${COMMON_LIB})
+
 target_link_options(${APP} PUBLIC
   -T${APP_LINKER_SCRIPT}
   -L${CMAKE_CURRENT_LIST_DIR}/ld
@@ -44,11 +68,11 @@ add_custom_target(${APP}.lss ALL
 # Hub bootloader
 ################################################################################
 
-set(C_SOURCES_BOOTLOADER "hub_bootloader.c" ${C_SOURCES})
 add_executable(${BOOTLOADER} ${C_SOURCES_BOOTLOADER})
 
 target_include_directories(${BOOTLOADER} PRIVATE ${HUB_INCLUDE})
 target_link_libraries(${BOOTLOADER} PRIVATE ${COMMON_LIB})
+
 target_link_options(${BOOTLOADER} PUBLIC
   -T${BOOTLOADER_LINKER_SCRIPT}
   -L${CMAKE_CURRENT_LIST_DIR}/ld
