--- a/.github/workflows/ceedling-tests.yml
+++ b/.github/workflows/ceedling-tests.yml
@@ -22,4 +22,4 @@ jobs:
       run: gem install ceedling
 
     - name: Run Ceedling tests
-      run: ceedling test:all
+      run: ceedling test:printf
